# ShotTrace

./: .gitignore  README.md
footage_analysis/: README.md  config.yaml  main.py  pyproject.toml  requirements.txt  schemas.py
footage_analysis/data/results/kirk/summaries/1_v00_start0p05_zoom1p0_oxp0p00_oyp0p00/: clip_00000.json  clip_00001.json  clip_00002.json  clip_00003.json  clip_00004.json  clip_00005.json  clip_00006.json  clip_00007.json  video_summary.json
footage_analysis/data/results/kirk/summaries/1_v01_start0p30_zoom1p6_oxm0p28_oym0p10/: clip_00000.json  clip_00001.json  clip_00002.json  clip_00003.json  clip_00004.json  clip_00005.json  clip_00006.json  clip_00007.json  video_summary.json
footage_analysis/data/results/kirk/summaries/1_v02_start0p55_zoom2p2_oxp0p32_oyp0p00/: clip_00000.json  clip_00001.json  clip_00002.json  clip_00003.json  clip_00004.json  clip_00005.json  clip_00006.json  clip_00007.json  video_summary.json
footage_analysis/data/results/kirk/summaries/1_v03_start0p80_zoom1p9_oxp0p00_oyp0p30/: clip_00000.json  clip_00001.json  clip_00002.json  clip_00003.json  clip_00004.json  clip_00005.json  clip_00006.json  clip_00007.json  video_summary.json
footage_analysis/data/videos/: process.py
footage_analysis/data/videos/kirk/processed/: manifest.json
footage_analysis/models/: llm.py  vlm.py  yolo.py
footage_analysis/pipeline/: __init__.py  chunker.py  run.py  tracker.py
footage_analysis/scripts/: transcode.sh
footage_analysis/utils/: __init__.py  backoff.py  common.py  context.py  image.py  prompts.py  transcode.sh
(+222 files in other folders)
