[project]
name = "shottrace-footage-analysis"
version = "0.1.0"
description = "ShotTrace footage analysis pipeline (chunking, detection, tracking, VLM/LLM summaries)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ultralytics",
  "opencv-python",
  "numpy",
  "pydantic>=2",
  "anthropic>=0.36",
  "cerebras-cloud-sdk>=1.0.0",
  "tqdm",
  "python-dotenv",
  "PyYAML",
  "requests",
]

[project.scripts]
footage-analysis = "footage_analysis.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["footage_analysis"]



